import "goby/acomms/protobuf/driver_base.proto"; // load up message DriverBaseConfig
import "goby/common/protobuf/zero_mq_node_config.proto";


package goby.pb.protobuf;

message Config
{
  extend goby.acomms.protobuf.DriverConfig
  {
    optional goby.common.protobuf.ZeroMQServiceConfig.Socket request_socket = 1321;
    optional double query_interval_seconds = 1322 [default = 1];
  }
}
